--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@ body {
     overflow: hidden;
     margin: 0;
 }
+
+#greeting-div, #todo-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
