--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     /* if you add padding or margin it won't affect width */
 }
 
+@media (max-width: 768px) {
+
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -16,9 +20,13 @@ body {
     margin: 0;
 }
 
-#greeting-div, #todo-div {
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+ul {
+    list-style-type: none;
 }
