--- a/style.css
+++ b/style.css
@@ -1,32 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap');
 
 * {
     box-sizing: border-box;
     /* if you add padding or margin it won't affect width */
 }
 
-@media (max-width: 768px) {
 
+body, button, input {
+    font-family: 'Karla', sans-serif;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+    background-color: #B09E99;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    height: 100vh;
+    margin: auto;
+    max-width: 800px;
+    margin-top: 50px;
+}
+
+.app {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    background-color: #FAD4C0;
+    overflow: auto;
+    border-radius: 10px;
+}
+
+.form-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+input {
+    width: 60%;
+    margin: 10px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding: 5px;
+    background-color: whitesmoke;
+}
+
+input:focus {
+    outline: none;
 }
 
 ul {
-    list-style-type: none;
+    list-style-type: circle;
+}
+
+.completed {
+    text-decoration: line-through;
+}
+
+li {
+    font-size: 20px;
+    line-height: 23px;
+    cursor: pointer;
+}
+
+li:hover {
+    font-weight: bold;
+}
+
+li.completed:hover::after {
+    content: ""
 }
